--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,6 +14,11 @@
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
           <% end %>
 
+          <%= f.input :current_password,
+                      hint: "Please enter your current password to confirm your changes",
+                      required: true,
+                      input_html: { autocomplete: "current-password" } %>
+
           <div class="row">
             <div class="col">
               <%= f.input :password,
@@ -27,10 +32,6 @@
                       input_html: { autocomplete: "new-password" } %>
             </div>
           </div>
-          <%= f.input :current_password,
-                      hint: "we need your current password to confirm your changes",
-                      required: true,
-                      input_html: { autocomplete: "current-password" } %>
           <div class="row">
             <div class="col">
               <%= f.input :first_name,
