--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,10 @@
   </head>
 
   <body>
-    <%= render "shared/navbar" %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="body">
+      <%= yield %>
+      <%= render "shared/navbar" %>
+    </div>
+    <%= render "shared/flashes" %>
   </body>
 </html>
