--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,15 @@
-<nav class="navbar bg-light">
-  <div class="container-fluid">
-    <%= link_to "Sportacus", root_path, class: "btn" %>
-    <div class="d-flex">
-      <% if user_signed_in? %>
-        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-      <% else %>
-        <%= link_to "Login", new_user_session_path, class: "btn" %>
-        <%= link_to "Sign-up", new_user_registration_path, class: "btn" %>
-      <% end %>
+<div class="navbar-top">
+  <nav class="navbar">
+    <div class="container-fluid">
+      <%= link_to "Sportan", root_path, class: "btn" %>
+      <div class="d-flex">
+        <% if user_signed_in? %>
+          <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        <% else %>
+          <%= link_to "Login", new_user_session_path, class: "btn" %>
+          <%= link_to "Sign-up", new_user_registration_path, class: "btn" %>
+        <% end %>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
