--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,7 @@
   <div class="grid-home">
     <% @articles.each do |article| %>
       <a href="#" class="card-home">
+        <%= cl_image_tag article.pictures.first.key %>
         <div class="card-home-content">
           <div class="card-title"><%= article.title %></div>
           <div class="card-overview"><%= article.description %></div>
