--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -5,9 +5,20 @@
   overflow: hidden;
   text-decoration: none;
   color: $black;
+  -webkit-transition: all 200ms ease-out;
+  -moz-transition: all 200ms ease-out;
+  -o-transition: all 200ms ease-out;
+  -ms-transition: all 200ms ease-out;
+  transition: all 200ms ease-out;
 
   &:hover {
-    color: $gray;
+    box-shadow: 0 10px 30px rgba(0,0,0,.5);
+    transform: scale(1.01);
+    -webkit-transition: all 100ms ease-in;
+    -moz-transition: all 100ms ease-in;
+    -o-transition: all 100ms ease-in;
+    -ms-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
   }
 
   img {
@@ -32,9 +43,6 @@
 
     .card-footer {
       text-align: right;
-      // display: flex;
-      // justify-content: space-between;
-      // text-align: center;
     }
 
   }
