--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,17 +6,18 @@
   </div>
 </div>
 <div class="container">
-  <h1>Articles to rent</h1>
+  <h1 class="mt-4">All sports articles to rent</h1>
   <div class="grid-home">
     <% @articles.each do |article| %>
-      <a href="#" class="card-home">
+      <%= link_to article_path(article), class: "card-home" do %>
         <%= cl_image_tag article.pictures.first.key %>
         <div class="card-home-content">
           <div class="card-title"><%= article.title %></div>
           <div class="card-overview"><%= article.description %></div>
           <div class="card-footer">$<%= article.daily_rate %> /day</div>
         </div>
-      </a>
+      <% end %>
+      <%# <a href="#" class="card-home"></a> %>
     <% end %>
   </div>
 </div>
