--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand bg-light">
   <div class="container-fluid">
     <%= link_to "Sportan", root_path, class: "navbar-brand" %>
     <div class="d-flex align-items-center">
@@ -10,8 +10,8 @@
               <li><%= link_to "Account", account_path, class: "dropdown-item" %></li>
               <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Add a new article</a></li>
-              <li><a class="dropdown-item" href="#">See all my articles</a></li>
+              <li><%= link_to "Add a new article", new_article_path, class: "dropdown-item" %></li>
+              <li><%= link_to "See all my articles", articles_path, class: "dropdown-item" %></li>
             <% else %>
               <li><%= link_to "Login", new_user_session_path, class: "dropdown-item" %></li>
               <li><%= link_to "Sign-up", new_user_registration_path, class: "dropdown-item" %></li>
