--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,44 @@
 <div class="container">
-  <h1 class="mt-4">Edit article</h1>
-
+  <div class="row justify-content-center my-4">
+    <div class="col-12 col-lg-6">
+      <h1>Edit article</h1>
+      <%= simple_form_for @article, url: articles_edit_characteristic_path, method: 'get' do |f| %>
+        <%= f.input :title %>
+        <%= f.input :description %>
+        <div class="row align-items-center">
+          <div class="col me-auto"><%= f.input :address %></div>
+          <div class="form-check col-auto">
+            <input class="form-check-input" type="checkbox" value="true" id="flexCheckChecked" name="use_personnal_address">
+            <label class="form-check-label" for="flexCheckChecked">
+              Use personnal address
+            </label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="mb-3 integer required article_minimum_rent_days col">
+            <%= f.label :minimum_rent_days, class: "form-label" %>
+            <div class="input-group mb-3">
+              <%= f.input_field :minimum_rent_days, class: "form-control text-end", min: "1", label: false, default: 1 %>
+              <span class="input-group-text">days</span>
+            </div>
+          </div>
+          <div class="mb-3 integer required article_daily_rate col">
+            <%= f.label :daily_rate, class: "form-label" %>
+            <div class="input-group mb-3">
+              <span class="input-group-text">$</span>
+              <%= f.input_field :daily_rate, class: "form-control text-end", min: "1", label: false %>
+              <span class="input-group-text" id="basic-addon2">.00</span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col"><%= f.input :conditions, collection: Article::CONDITIONS %></div>
+          <div class="col"><%= f.input :brand %></div>
+        </div>
+        <%= f.input :type, disabled: true, collection: Article::TYPES %>
+        <input type="hidden" id="type" name="type" value="<%= @article.type&.downcase %>">
+        <button type="submit" value="Submit" class="btn btn-primary float-end">Next <i class="fa-solid fa-arrow-right"></i></button>
+      <% end %>
+    </div>
+  </div>
 </div>
