--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,11 @@
     <% @articles.each do |article| %>
       <div class="card-home fab-container">
         <%= link_to article_path(article) do %>
-          <%= cl_image_tag article.pictures.first.key %>
+          <% if article.pictures.attached? %>
+            <%= cl_image_tag article.pictures.first.key %>
+          <% else %>
+            <%= image_tag "picture-placeholder" %>
+          <% end %>
           <div class="card-home-content">
             <div class="card-title"><%= article.title %></div>
             <div class="card-overview"><%= article.description %></div>
