--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,14 +10,17 @@
   <div class="grid-home">
     <% @articles.each do |article| %>
       <%= link_to article_path(article), class: "card-home" do %>
-        <%= cl_image_tag article.pictures.first.key %>
+        <% if article.pictures.attached? %>
+          <%= cl_image_tag article.pictures.first.key %>
+        <% else %>
+          <%= image_tag "picture-placeholder" %>
+        <% end %>
         <div class="card-home-content">
           <div class="card-title"><%= article.title %></div>
           <div class="card-overview"><%= article.description %></div>
           <div class="card-footer">$<%= article.daily_rate %> /day</div>
         </div>
       <% end %>
-      <%# <a href="#" class="card-home"></a> %>
     <% end %>
   </div>
 </div>
