--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
             <div class="card-footer">$<%= article.daily_rate %> /day</div>
           </div>
         <% end %>
-        <div class="fab-holder">
+        <div class="fab-multi-holder">
           <%= link_to edit_article_path(article), class: "fab-btn mb-2" do %>
             <i class="fa-solid fa-pen-to-square"></i>
           <% end %>
