--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,8 @@
           </div>
           <%= f.input :address,
                       required: true,
-                      input_html: { autocomplete: "address" } %>
+                      input_html: { autocomplete: "address", class: "form-control d-none", data: { address_autocomplete_target: "address" } },
+                      wrapper_html: { data: { controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"] }} %>
           <%= f.input :description %>
         </div>
 
