--- a/app/assets/stylesheets/components/_fab.scss
+++ b/app/assets/stylesheets/components/_fab.scss
@@ -10,35 +10,48 @@
 
   }
 
-  .fab-btn {
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    padding: 8px 12px;
-    border-radius: 100%;
-    box-shadow: 0 10px 30px rgba(0,0,0,.2);
-    text-align: center;
-    display: flex;
-    align-items: center;
+}
 
-    &:active {
-      box-shadow: 0 10px 30px rgba(0,0,0,.1);
-    }
+.fab-btn {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  padding: 8px 12px;
+  border-radius: 100%;
+  box-shadow: 0 10px 30px rgba(0,0,0,.2);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  border: none;
+
+  &:active {
+    box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  }
+}
+
+.p-abs-center {
+  position: absolute;
+  z-index: 1;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%); /* iOS */
+
+  i {
+    width: 100%;
   }
 
-  .p-abs-center {
-    position: absolute;
-    z-index: 1;
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%); /* iOS */
+}
 
-    i {
-      width: 100%;
-    }
+.p-abs-right {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
 
+  i {
+    width: 100%;
   }
 
 }
