Added partials for product picture grids

--- a/app/assets/stylesheets/components/_input_button.scss
+++ b/app/assets/stylesheets/components/_input_button.scss
@@ -2,6 +2,11 @@
   padding-right: 45px;
   border-radius: 50rem;
   height: 40px;
+
+  &:focus {
+    border: 1px solid #ced4da;
+    box-shadow: none;
+  }
 }
 
 .btn-simple {
