--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
           <% if article.pictures.attached? %>
             <%= cl_image_tag article.pictures.first.key %>
           <% else %>
-            <%= image_tag "picture-placeholder" %>
+            <%= image_tag "picture-placeholder-surfboard" %>
           <% end %>
           <div class="card-home-content">
             <div class="card-title"><%= article.title %></div>
@@ -24,7 +24,6 @@
           <% end %>
         </div>
       </div>
-      <%# <a href="#" class="card-home"></a> %>
     <% end %>
   </div>
 </div>
