--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,21 +1,9 @@
 <div class="container">
   <h1 class="mt-3"><%= @article.title %></h1>
   <p><%= @article.address %></p>
-  <% if @article.pictures.attached? %>
-    <div class="row article-pictures mt-2">
-      <div class="col-12 col-md-6 height-100 p-0">
-        <%= cl_image_tag @article.pictures.first.key, class: "height-100" %>
-      </div>
-      <div class="mobile-hidden col-12 col-md-6 height-100 p-0">
-        <div class="row height-50 ms-2">
-          <div class="col-6 height-100 p-0 pb-1"><%= cl_image_tag @article.pictures.first.key, class: "height-100" %></div>
-          <div class="col-6 height-100 p-0 ps-2 pb-1"><%= cl_image_tag @article.pictures.first.key, class: "height-100" %></div>
-        </div>
-        <div class="row height-50 ms-2">
-          <div class="col-6 height-100 p-0 pt-1"><%= cl_image_tag @article.pictures.first.key, class: "height-100" %></div>
-          <div class="col-6 height-100 p-0 ps-2 pt-1"><%= cl_image_tag @article.pictures.first.key, class: "height-100" %></div>
-        </div>
-      </div>
-    </div>
+  <% if @article.pictures.count >= 5 %>
+    <%= render "shared/grid_pictures", article: @article %>
+  <% elsif @article.pictures.count >= 1 %>
+    <%= render "shared/grid_pictures_#{@article.pictures.count}", article: @article %>
   <% end %>
 </div>
