--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
         <% if article.pictures.attached? %>
           <%= cl_image_tag article.pictures.first.key %>
         <% else %>
-          <%= image_tag "picture-placeholder" %>
+          <%= image_tag "picture-placeholder-surfboard" %>
         <% end %>
         <div class="card-home-content">
           <div class="card-title"><%= article.title %></div>
