--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "font-awesome";
 @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
 @import 'flatpickr/dist/flatpickr.css';
+@import 'swiper/swiper-bundle.min.css';
 
 // Your CSS partials
 @import "components/index";
