--- a/app/assets/stylesheets/components/_article_pictures.scss
+++ b/app/assets/stylesheets/components/_article_pictures.scss
@@ -4,10 +4,21 @@
   border-radius: 16px;
   overflow: hidden;
 
+  .btn-carousel {
+    transition: 0.3s;
+
+    &:hover{
+      transition: 0.3s;
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
+
   img {
     object-fit: cover;
     width: 100%;
   }
+
 }
 
 
