--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-controller="modal-image-carousel">
   <h1 class="mt-3"><%= @article.title %></h1>
   <p><%= @article.address %></p>
   <% if @article.pictures.count >= 5 %>
@@ -6,6 +6,23 @@
   <% elsif @article.pictures.count >= 1 %>
     <%= render "shared/grid_pictures_#{@article.pictures.count}", article: @article %>
   <% end %>
+  <!-- Modal -->
+  <div class="modal" data-modal-image-carousel-target="modal" data-action="click->modal-image-carousel#modalClick">
+
+    <!-- Close button -->
+    <span class="close" data-action="click->modal-image-carousel#closeClick">&times;</span>
+
+    <!-- Modal content (image carousel) -->
+    <div class="modal-content">
+      <div data-controller="carousel" class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">Slide 1</div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="d-flex">
     <div class="col-flex show-col-left" style="height: 500px;">
     </div>
