--- a/app/views/shared/_grid_pictures_2.html.erb
+++ b/app/views/shared/_grid_pictures_2.html.erb
@@ -1,8 +1,8 @@
 <div class="row article-pictures mt-2">
   <div class="col-12 col-md-6 height-100 p-0">
-    <%= cl_image_tag article.pictures[0].key, class: "height-100" %>
+    <%= cl_image_tag article.pictures[0].key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %>
   </div>
   <div class="mobile-hidden col-md-6 height-100 p-0 ps-2">
-    <%= cl_image_tag article.pictures[1].key, class: "height-100" %>
+    <%= cl_image_tag article.pictures[1].key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %>
   </div>
 </div>
