--- a/app/views/shared/_grid_pictures_3.html.erb
+++ b/app/views/shared/_grid_pictures_3.html.erb
@@ -1,11 +1,11 @@
 <div class="row article-pictures mt-2">
   <div class="col-12 col-md-6 height-100 p-0">
-    <%= cl_image_tag article.pictures[0].key, class: "height-100" %>
+    <%= cl_image_tag article.pictures[0].key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %>
   </div>
   <div class="mobile-hidden height-100 col-6 p-0 ps-2">
     <div class="row height-100 m-0">
-      <div class="height-100 col-6 p-0 pe-1"><%= cl_image_tag article.pictures[1].key, class: "height-100" %></div>
-      <div class="height-100 col-6 p-0 ps-1"><%= cl_image_tag article.pictures[2].key, class: "height-100" %></div>
+      <div class="height-100 col-6 p-0 pe-1"><%= cl_image_tag article.pictures[1].key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %></div>
+      <div class="height-100 col-6 p-0 ps-1"><%= cl_image_tag article.pictures[2].key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %></div>
     </div>
   </div>
 </div>
