--- a/app/assets/stylesheets/components/_image_carousel.scss
+++ b/app/assets/stylesheets/components/_image_carousel.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
 
   .swiper-slide {
-    height: 250px;
+    height: calc(90vh - 100px);
     display: flex;
     align-items:center;
     justify-content: center;
@@ -14,7 +14,7 @@
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 4; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
@@ -23,30 +23,44 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
 
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
+  .modal-center {
+    // display: flex;
+    // align-items: center;
 
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
+    .modal-content {
+      margin: auto;
+      display: block;
+      width: 80%;
+      max-width: 700px;
+      background-color: transparent;
 
-  &:hover, &:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #f1f1f1;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+
+      &:hover, &:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
   }
+
 }
+
 
 @media only screen and (max-width: 700px){
   .modal-content {
