--- a/app/views/shared/_grid_pictures_1.html.erb
+++ b/app/views/shared/_grid_pictures_1.html.erb
@@ -1,3 +1,3 @@
 <div class="article-pictures mt-2">
-  <%= cl_image_tag article.pictures.first.key, class: "height-100", data: { action: "click->modal-image-carousel#imageClick" } %>
+  <%= cl_image_tag article.pictures.first.key, class: "height-100 btn-carousel", data: { action: "click->modal-image-carousel#imageClick" } %>
 </div>
