--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -37,14 +37,38 @@
     </div>
 
   </div>
-  <div class="d-flex">
+  <div class="d-flex-show mt-3">
     <div class="col-flex show-col-left" style="height: 500px;">
     </div>
-    <div class="col-flex show-col-right" data-controller="date-picker" style="height: 500px;">
-      <%= form_for @booking, url: 'article_bookings_path' do |f| %>
-        <input type="text" class="form-control" data-date-picker-target="dates">
+    <div class="col-flex show-col-right" data-controller="date-picker" data-date-picker-daily-rate-value="<%= @article.daily_rate %>">
+      <%= form_for @booking, url: article_bookings_path(@article) do |f| %>
+        <div data-date-picker-target="dates"></div>
         <input type="hidden" name="booking[start_date]" data-date-picker-target="start">
         <input type="hidden" name="booking[end_date]" data-date-picker-target="end">
+        <br>
+        <div class="d-flex px-2">
+          <p class="mx-2 my-1">From</p>
+          <p class="flex-grow-1 text-end mx-2 my-1" data-date-picker-target="from"></p>
+        </div>
+        <div class="d-flex px-2">
+          <p class="mx-2 my-1">To</p>
+          <p class="flex-grow-1 text-end mx-2 my-1" data-date-picker-target="to"></p>
+        </div>
+        <hr>
+        <div class="d-flex px-2">
+          <p class="mx-2 my-1">Number of full days</p>
+          <p class="flex-grow-1 text-end mx-2 my-1" data-date-picker-target="days"></p>
+        </div>
+        <div class="d-flex px-2">
+          <p class="mx-2 my-1">Daily rate</p>
+          <p class="flex-grow-1 text-end mx-2 my-1">$ <%= @article.daily_rate %>.00</p>
+        </div>
+        <hr>
+        <div class="d-flex px-2">
+          <p class="mx-2 my-1"><b>Total</b></p>
+          <p class="flex-grow-1 text-end mx-2 my-1" data-date-picker-target="total"><b></b></p>
+        </div>
+
         <%= f.submit class: "btn btn-primary mt-2" %>
       <% end %>
     </div>
