Added booking validations + article descriptions

--- a/app/assets/stylesheets/components/_article_pictures.scss
+++ b/app/assets/stylesheets/components/_article_pictures.scss
@@ -1,7 +1,7 @@
 .article-pictures {
 
   height: 350px;
-  border-radius: 16px;
+  border-radius: $border-radius-lg;
   overflow: hidden;
 
   .btn-carousel {
