--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,3 +9,6 @@
 @import "map";
 @import "input_button";
 @import "image_carousel";
+@import "error_messages";
+@import "containers";
+@import "simple_card";
