--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,47 +2,39 @@
   <h1 class="mt-3"><%= @article.title %></h1>
   <p><%= @article.address %></p>
   <% if @article.pictures.count >= 5 %>
-    <%= render "shared/grid_pictures", article: @article %>
+    <%= render "shared/grid_pictures/grid_pictures", article: @article %>
   <% elsif @article.pictures.count >= 1 %>
-    <%= render "shared/grid_pictures_#{@article.pictures.count}", article: @article %>
+    <%= render "shared/grid_pictures/grid_pictures_#{@article.pictures.count}", article: @article %>
   <% end %>
-  <!-- Modal -->
-  <div class="modal" data-modal-image-carousel-target="modal" data-action="click->modal-image-carousel#modalClick">
-    <div class="modal-center">
-      <!-- Close button -->
-      <span class="close" data-action="click->modal-image-carousel#closeClick">&times;</span>
 
-      <!-- Modal content (image carousel) -->
-      <div class="modal-content">
-        <div class="swiper-container" data-controller="carousel"
-                                      data-carousel-options-value='{
-                                        "pagination": { "el": ".swiper-pagination",
-                                                        "dynamicBullets": "true" },
-                                        "navigation": { "nextEl": ".swiper-button-next",
-                                                        "prevEl": ".swiper-button-prev"}}'>
-          <div class="swiper-wrapper">
-            <% @article.pictures.each do |picture| %>
-              <div class="swiper-slide"><%= cl_image_tag picture.key %></div>
-            <% end %>
-          </div>
+  <%= render "shared/centered_modal" do %>
+    <%= render "shared/swiper" do %>
+      <% @article.pictures.each do |picture| %>
+        <div class="swiper-slide"><%= cl_image_tag picture.key %></div>
+      <% end %>
+    <% end %>
+  <% end %>
 
-          <!-- Pagination (... or 1/10 or progress bar) -->
-          <div class="swiper-pagination"></div>
-
-          <!-- Navigation buttons (< >) -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        </div>
+  <div class="d-flex-show mt-3">
+    <div class="col-flex show-col-left me-4">
+      <%= render 'shared/article_description/article_details', article: @article %>
+      <%= render "shared/article_description/#{@article.type.downcase}_details", characteristic: @article.characteristic %>
+      <div class="mt-4 map-container"
+        data-controller="map"
+        data-map-markers-value="[<%= @marker.to_json %>]"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
-
-  </div>
-  <div class="d-flex-show mt-3">
-    <div class="col-flex show-col-left" style="height: 500px;">
-    </div>
-    <div class="col-flex show-col-right" data-controller="date-picker" data-date-picker-daily-rate-value="<%= @article.daily_rate %>">
+    <div class="col-flex show-col-right p-3 rounded-container-shadow" data-controller="date-picker" data-date-picker-daily-rate-value="<%= @article.daily_rate %>">
       <%= form_for @booking, url: article_bookings_path(@article) do |f| %>
         <div data-date-picker-target="dates"></div>
+        <% if @booking.errors.any? %>
+          <ul class="mt-2 error-messages">
+            <% @booking.errors.full_messages.each do |error| %>
+              <li><%= error %></li>
+            <% end %>
+          </ul>
+        <% end %>
         <input type="hidden" name="booking[start_date]" data-date-picker-target="start">
         <input type="hidden" name="booking[end_date]" data-date-picker-target="end">
         <br>
@@ -68,9 +60,9 @@
           <p class="mx-2 my-1"><b>Total</b></p>
           <p class="flex-grow-1 text-end mx-2 my-1" data-date-picker-target="total"><b></b></p>
         </div>
-
         <%= f.submit class: "btn btn-primary mt-2" %>
       <% end %>
     </div>
   </div>
 </div>
+<br>
