--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
           <div class="card-home-content">
             <div class="card-title"><%= article.title %></div>
             <div class="card-overview"><%= article.description %></div>
-            <div class="card-footer">$<%= article.daily_rate %> /day</div>
+            <div class="card-footer">$<%= article.price %> /day</div>
           </div>
         <% end %>
         <div class="fab-multi-holder">
