--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
         <div class="card-home-content">
           <div class="card-title"><%= article.title %></div>
           <div class="card-overview"><%= article.description %></div>
-          <div class="card-footer">$<%= article.daily_rate %> /day</div>
+          <div class="card-footer"><%= humanized_money_with_symbol(article.price) %> /day</div>
         </div>
       <% end %>
     <% end %>
